fixing books bugs
